# remote_car

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
car/: CMakeLists.txt  main.cpp  pinOut.h
car/control_motors/: control.cpp  control.h  pid.cpp  pid.h
car/encoder/: encoder.cpp  encoder.h
car/servo/: servo.cpp  servo.h
common/: app.h
common/NRF24_communication/: communication.cpp  communication.h  protocol.h
common/live_pulse/: livePulse.cpp  livePulse.h
controller/: CMakeLists.txt  main.cpp  pinOut.h
controller/joystick/: joystick.cpp  joystick.h  pinout.h
